# YTLDL

./: .gitignore  .travis.yml  LICENSE  README.md
.travis/: build_android.sh  install.sh  pack.sh
app/: CMakeLists.txt  build.gradle  conanfile.txt
app/cmake/: conan.cmake
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: channel.cpp  filesystem.cpp  handle.h  playlist.cpp  video.cpp
app/src/main/cpp/download/: global_options.cpp
app/src/main/cpp/filesystem/: settings.cpp
app/src/main/java/de/linux13524/ytldl/: AddListFragment.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/de/linux13524/ytldl/fragments/: AddListFragment.kt  SettingsFragment.kt
app/src/main/java/de/linux13524/ytldl/jniwrapper/: Channel.kt  Filesystem.kt  Playlist.kt  Video.kt
app/src/main/java/de/linux13524/ytldl/jniwrapper/download/: GlobalOptions.kt
app/src/main/java/de/linux13524/ytldl/jniwrapper/filesystem/: Settings.kt
app/src/main/java/de/linux13524/ytldl/preferences/: IntEditTextPreference.kt
app/src/main/java/de/linux13524/ytldl/utils/: LogReader.kt  PermissionManager.kt  PreferencesManager.kt
app/src/main/res/layout/: activity_main.xml  fragment_add_list.xml  header_layout.xml
app/src/main/res/menu/: menu_navigation.xml  menu_options.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: preferences.xml
gradle/wrapper/: gradle-wrapper.properties
